* src/Makefile.am, f[l]ight.cpp: Renamed flight.cpp to fight.cpp, which it was
supposed to be called. Modified Makefile.am to reflect this change.
* Makefile.am, workspaces/game.cbp: Added workspace for Code::Blocks.

2007-06-19   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* news.cpp, newstops.cpc: Added art for the Liberal Guardian to be
turned into a major newspaper later.

2007-06-19   Chris Johnson   <grundee@users.sourceforge.net>
* configure.ac, includes.h: Changed version to "3.11.1svn2"
as Jonathan's changes with the art may break compatability with older
versions.

2007-06-19   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* chase.cpp: Fixed a crash bug relating to squad members not being
removed from their squad if killed in a car chase away from their
squad.

2007-06-20   Chris Johnson   <grundee@users.sourceforge.net>
* getnames.cpp (enter_name): Added a function to allow a player to enter 
a name. Supports a default value and length.
* includes.h: Added a function prototype for enter_name.
* includes.h: Added a #define called CREATURE_NAMELEN and set it to
the maximum name length. Used this value in declaration of creaturest.
* date.cpp (completedate, completevacation): Used enter_name for name entry.
* haulkidnap.cpp (kidnaptransfer): Used enter_name for name entry.

2007-06-20   Chris Johnson   <grundee@users.sourceforge.net>
* includes.h: Added SLOGAN_LEN which is set to the length of the slogan.
Changed the declarations of slogan to SLOGAN_LEN+1, and the declaration of 
name and propername in creaturest to CREATURE_NAMELEN+1. The last character
is for a NULL that will not be overwritten by mvgetnstr().
* basemode/reviewmode.cpp: Changed mvgetstr to mvgetnstr to prevent overflows
of the creature's name.
* basemode/baseactions.cpp: Changed mvgetstr to mvgetnstr to prevent overflows
of the slogan.

RELEASE VERSION 3.11.1:
Fixed crash when squad is disbanded.
Split up game.cpp into smaller files.
Support for GNU Autotools